force-app/main/default/objects/Quote_and_Order_Staging__c/Quote_and_Order_Staging__c.object-meta.xml
<CustomObject>
    <description>This object is created as part of RCDM-T extension process.</description>
    <label>Quote and Order Staging</label>
    <nameField>
        <displayFormat>QnO-{0000}</displayFormat>
        <label>Quote and Order Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote and Order Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>