force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Account_OM__c.field-meta.xml
<CustomField>
    <fullName>Account_OM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account OM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote and Order Stagings (Account OM)</relationshipLabel>
    <relationshipName>Quote_and_Order_Stagings1</relationshipName>
    <type>Lookup</type>
</CustomField>