force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Amended_Renewed_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Amended_Renewed_Service_Contract__c</fullName>
    <label>Amended/Renewed Service Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>