force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Quote and Order Stagings</relationshipLabel>
    <relationshipName>Quote_and_Order_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>