force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Disposition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Reason__c</fullName>
    <label>Disposition Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>