force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Quote and Order Stagings</relationshipLabel>
    <relationshipName>Quote_and_Order_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>