force-app/main/default/objects/Quote_and_Order_Staging__c/fields/EOL_EndDate__c.field-meta.xml
<CustomField>
    <fullName>EOL_EndDate__c</fullName>
    <label>EOL EndDate</label>
    <type>Date</type>
</CustomField>