force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Extended_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Extended_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extended Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Quote and Order Stagings (Extended Order Item)</relationshipLabel>
    <relationshipName>Quote_and_Order_Stagings1</relationshipName>
    <type>Lookup</type>
</CustomField>