force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Has_SubscribedAssetNames__c.field-meta.xml
<CustomField>
    <fullName>Has_SubscribedAssetNames__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has SubscribedAssetNames</label>
    <type>Checkbox</type>
</CustomField>