force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Header_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Header_End_Date__c</fullName>
    <label>Header End Date</label>
    <type>Date</type>
</CustomField>