force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Header_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Header_Start_Date__c</fullName>
    <label>Header Start Date</label>
    <type>Date</type>
</CustomField>