force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Header_Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Header_Subscription_Term__c</fullName>
    <label>Header Subscription Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>