force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Line_Item_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Start_Date__c</fullName>
    <label>Line Item Start Date</label>
    <type>Date</type>
</CustomField>