force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>