force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Type__c</fullName>
    <label>Opportunity Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>