force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Process_Status_OM__c.field-meta.xml
<CustomField>
    <fullName>Process_Status_OM__c</fullName>
    <label>Process Status (OM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Require Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>