force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial RCDM-T Processing</fullName>
            </value>
            <value>
                <fullName>QLI &amp; Order Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>