force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Date__c</fullName>
    <description>Date to identify Eligible RCDM-T to Process</description>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>