force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <description>This will store the quote Id that got created as part of initial process.</description>
    <label>Quote Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>