force-app/main/default/objects/Quote_and_Order_Staging__c/fields/QuoteLine_Id__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote and Order Stagings</relationshipLabel>
    <relationshipName>Quote_and_Order_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>