force-app/main/default/objects/Quote_and_Order_Staging__c/fields/RCDM_Linkage_With_RSC__c.field-meta.xml
<CustomField>
    <fullName>RCDM_Linkage_With_RSC__c</fullName>
    <label>RCDM Linkage With RSC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>