force-app/main/default/objects/Quote_and_Order_Staging__c/fields/RenewedContractLine__c.field-meta.xml
<CustomField>
    <fullName>RenewedContractLine__c</fullName>
    <label>RenewedContractLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>