force-app/main/default/objects/Quote_and_Order_Staging__c/fields/RSC_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>RSC_OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSC OrderItem</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Quote and Order Stagings</relationshipLabel>
    <relationshipName>Quote_and_Order_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>