force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Special_Program__c.field-meta.xml
<CustomField>
    <fullName>Special_Program__c</fullName>
    <label>Special Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>