force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Subscribed_Asset_IDs__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Asset_IDs__c</fullName>
    <label>Subscribed Asset IDs</label>
    <length>19000</length>
    <type>LongTextArea</type>
</CustomField>