force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Subscribed_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Asset_Name__c</fullName>
    <label>Subscribed Asset Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>