force-app/main/default/objects/Quote_and_Order_Staging__c/fields/SubscribedAssetNames__c.field-meta.xml
<CustomField>
    <fullName>SubscribedAssetNames__c</fullName>
    <label>SubscribedAssetNames</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>