force-app/main/default/objects/Quote_and_Order_Staging__c/fields/Subsumed_Old_Contract_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Subsumed_Old_Contract_Line_Items__c</fullName>
    <label>Subsumed Old Contract Line Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>