force-app/main/default/objects/Quote_and_Order_Staging__c/listViews/Child_Records.listView-meta.xml
<ListView>
    <fullName>Child_Records</fullName>
    <columns>NAME</columns>
    <columns>Account_OM__c</columns>
    <columns>Quantity__c</columns>
    <columns>Line_Item_Start_Date__c</columns>
    <columns>Line_Item_End_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Order__c</columns>
    <columns>Process_Status_CPQ__c</columns>
    <columns>Process_Status_OM__c</columns>
    <columns>Process_Type__c</columns>
    <columns>Quote_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Type__c</field>
        <operation>equals</operation>
        <value>QLI &amp; Order Processing</value>
    </filters>
    <label>Child Records</label>
</ListView>