force-app/main/default/objects/Quote_and_Order_Staging__c/listViews/Initial_Records.listView-meta.xml
<ListView>
    <fullName>Initial_Records</fullName>
    <columns>NAME</columns>
    <columns>Account_OM__c</columns>
    <columns>Process_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Quote_Id__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Process_Status_CPQ__c</columns>
    <columns>Process_Status_OM__c</columns>
    <columns>EOL_EndDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Type__c</field>
        <operation>equals</operation>
        <value>Initial RCDM-T Processing</value>
    </filters>
    <label>Initial Records</label>
</ListView>